added markup full page index

--- a/index.html
+++ b/index.html
@@ -239,18 +239,18 @@
       </div>
       <div class="popup-map">
         <img src="img/map-big.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
-        <button class="popup-map-close" aria-label="Закрыть"></button>
+        <button class="popup-map__close" aria-label="Закрыть"></button>
       </div>
       <div class="write-us write-us_hidden">
         <form action="https://echo.htmlacademy.ru" method="post">
-          <label for="your-name">Ваше Имя:</label>
-          <input type="text" name="name" id="your-name" placeholder="Имя Фамилия">
-          <label for="your-email">Ваш email:</label>
-          <input type="email" name="email" id="your-email" placeholder="email@example.com">
-          <label for="your-text">Текст письма:</label>
-          <textarea name="text" id="your-text" cols="30" rows="10">В свободной форме</textarea>
-          <input type="submit" name="submit" value="Отправить">
-          <button class="write-us-close" aria-label="Закрыть"></button>
+          <label class="write-us__label" for="your-name">Ваше Имя:</label>
+          <input class="write-us__input" type="text" name="name" id="your-name" placeholder="Имя Фамилия">
+          <label class="write-us__label" for="your-email">Ваш email:</label>
+          <input class="write-us__input"  type="email" name="email" id="your-email" placeholder="email@example.com">
+          <label class="write-us__label" for="your-text">Текст письма:</label>
+          <textarea class="write-us__textarea" name="text" id="your-text" cols="30" rows="10">В свободной форме</textarea>
+          <input class="write-us__submit" type="submit" name="submit" value="Отправить">
+          <button class="write-us__close" aria-label="Закрыть"></button>
         </form>
       </div>
     </section>
