--- a/catalog.html
+++ b/catalog.html
@@ -8,16 +8,16 @@
 
 <body>
   <header class="header">
-    <div class="container container_center">
+    <div class="container">
       <a href="index.html" class="header__logo">Техномарт</a>
-      <form class="search" action="#" method="GET">
-        <label class="visually-hidden" for="search">Поиск:</label>
+      <form class="search" action="https://echo.htmlacademy.ru" method="get">
+        <label class="search__label" for="search" aria-label="Поиск"></label>
         <input class="search__input" id="search" type="search" name="search" placeholder="Поиск:">
       </form>
       <section class="user-order">
         <h2 class="visually-hidden">Отложеный заказ</h2>
         <a href="#" class="user-order__bookmark">Закладки: 0</a>
-        <a href="#" class="user-order__basket">Корзина: 0</a>
+        <a href="#" class="user-order__basket">Корзина: 10</a>
         <a href="#" class="user-order__order">Оформить заказ</a>
       </section>
     </div>
@@ -56,7 +56,7 @@
   <main class="main-content">
     <div class="container">
       <ul class="breadcrumbs">
-        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Главная</a></li>
+        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link" aria-label="Главная"></a></li>
         <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Каталог</a></li>
         <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Инструмент</a></li>
         <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Перфораторы</a></li>
@@ -66,7 +66,23 @@
       </div>
       <section class="filters-product">
         <h2 class="visually-hidden">Фильтр товаров</h2>
-        <form class="filters-product__form" action="#" method="GET">
+        <form class="filters-product__form" action="https://echo.htmlacademy.ru" method="get">
+          <span class="filters-product__price">Фильтр:</span>
+          <fieldset class="filters-product__price-group">
+            <legend class="filters-product__price-title">Цена</legend>
+            <div class="price-slider">
+              <div class="price-slider__line">
+                <div class="price-slider__line-fill"></div>
+              </div>
+              <div class="price-slider__control price-slider__control-min" tabindex="0"></div>
+              <div class="price-slider__control price-slider__control-max" tabindex="0"></div>
+            </div>
+            <div class="filters-product__price-item">
+              <input class="filters-product__price-input" type="text" name="price" value="0">
+              <input class="filters-product__price-input" type="text" name="price" value="30000">
+            </div>
+          </fieldset>
+          <hr class="separator">
           <fieldset class="filters-product__group">
             <legend class="filters-product__group-title">Производители:</legend>
             <label class="filters-product__manufacturers" for="bosh">Bosh</label>
@@ -82,6 +98,7 @@
             <label class="filters-product__manufacturers" for="hitachi">Hitachi</label>
             <input class="filters-product__choice" id="hitachi" type="checkbox" name="manufacturers" value="Hitachi">
           </fieldset>
+          <hr class="separator">
           <fieldset class="filters-product__group">
             <legend class="filters-product__group-title">Питание:</legend>
             <label class="filters-product__type" for="rechargeable">Аккумуляторные</label>
@@ -96,6 +113,16 @@
       </section>
       <section class="catalog-product">
         <h2 class="visually-hidden">Каталог товаров</h2>
+        <section class="sorting">
+          <h2 class="sorting__title">Сортировка:</h2>
+          <ul class="sorting__list">
+            <li class="sorting__item"><a href="#" class="sorting__link sorting__link_active">По цене</a></li>
+            <li class="sorting__item"><a href="#" class="sorting__link">По типу</a></li>
+            <li class="sorting__item"><a href="#" class="sorting__link">По функционалу</a></li>
+            <li class="sorting__item"><a href="#" class="sorting__link-up sorting__link-up_active" aria-label="Сортировка по возрастанию"></a></li>
+            <li class="sorting__item"><a href="#" class="sorting__link-down" aria-label="Сортировка по убыванию"></a></li>
+          </ul>
+        </section>
         <article class="product">
           <h2 class="visually-hidden">Описание товара</h2>
           <section class="product__about">
@@ -213,20 +240,42 @@
             <button class="product__purchase-bookmark">В закладки</button>
           </div>
         </article>
+        <div class="page">
+          <a href="#" class="page__link page__link_active">1</a>
+          <a href="#" class="page__link">2</a>
+          <a href="#" class="page__link">3</a>
+          <a href="#" class="page__link-next">Следующая</a>
+        </div>
+        <div class="popup-order">
+          <p class="popup-order__title">Товар добавлен в корзину!</p>
+          <a href="#" class="popup-order__link popup-modal__order_red">Оформить заказ</a>
+          <a href="#" class="popup-order__link">Продолжить покупки</a>
+          <button class="popup-order__close" aria-label="Закрыть"></button>
+        </div>
+      </section>
+      <section class="about-product">
+        <h2 class="about-product__title">Пара слов о Перфораторах</h2>
+        <p class="about-product__subtitle">Перфоратор — универсальный строительный инструмент. Предназначен для
+          сверления и долбления отверстий в кирпиче, бетоне и камне.</p>
+        <p class="about-product__subtitle">Перфоратор — универсальный строительный инструмент. Предназначен для
+          сверления и долбления отверстий в кирпиче, бетоне и камне. <br> Существуют электромеханические и
+          пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного
+          молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный
+          молоток и ударная дрель.</p>
       </section>
     </div>
   </main>
   <footer class="footer">
     <div class="footer__top container">
       <div class="footer__top_left">
-        <a href="#" class="footer__top-logo">Техномарт</a>
+        <a class="footer__top-logo">Техномарт</a>
         <p class="footer__top-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
       </div>
       <div class="footer__top_right">
         <ul class="footer__top-navigation">
           <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Компания</a></li>
           <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Новости</a></li>
-          <li class="footer__top-navigation-item"><a class="footer__top-navigation-link">Каталог</a></li>
+          <li class="footer__top-navigation-item"><a href="catalog.html" class="footer__top-navigation-link">Каталог</a></li>
           <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Доставка</a></li>
           <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Контакты</a></li>
         </ul>
@@ -242,9 +291,9 @@
       <div class="container">
         <p class="footer__bottom-copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
         <ul class="footer__bottom-social">
-          <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link">vk</a></li>
-          <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link">fs</a></li>
-          <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link">inst</a></li>
+          <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link" aria-label="Техномарт в ВКонтакте"></a></li>
+          <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link" aria-label="Техномарт в Facebook"></a></li>
+          <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link" aria-label="Техномарт в Instagram"></a></li>
         </ul>
         <p class="footer__bottom-communication">Обратная связь: <a href="#" class="footer__bottom-communication-link">mail@htmlacademy.ru</a></p>
         <p class="footer__bottom-developed">Разработано: <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer__bottom-developed-link">htmlacademy.ru</a></p>
