stylized card-product and popular-manufacturers

--- a/index.html
+++ b/index.html
@@ -163,34 +163,34 @@
       </div>
     </section>
     <section class="popular-manufacturers container">
-      <div class="wrapper">
+      <div class="wrapper-row">
         <h2 class="popular-manufacturers-title">Популярные производители:</h2>
         <a href="#" class="popular-manufacturers-link">Все производители</a>
       </div>
-      <div class="wrapper-product">
-        <div class="wrapper-product__item">
-          <img class="wrapper-product__img" src="img/bosch.jpg" alt="Bosh">
+      <div class="wrapper-manufacturers">
+        <div class="wrapper-manufacturers__item">
+          <img class="wrapper-manufacturers__img" src="img/bosch.jpg" alt="Bosh">
         </div>
-        <div class="wrapper-product__item">
-          <img class="wrapper-product__img" src="img/Makita.jpg" alt="Makita">
+        <div class="wrapper-manufacturers__item">
+          <img class="wrapper-manufacturers__img" src="img/Makita.jpg" alt="Makita">
         </div>
-        <div class="wrapper-product__item">
-          <img class="wrapper-product__img" src="img/DeWALT.jpg" alt="DeWALT">
+        <div class="wrapper-manufacturers__item">
+          <img class="wrapper-manufacturers__img" src="img/DeWALT.jpg" alt="DeWALT">
         </div>
-        <div class="wrapper-product__item">
-          <img class="wrapper-product__img" src="img/Interstol.jpg" alt="Интерскол">
+        <div class="wrapper-manufacturers__item">
+          <img class="wrapper-manufacturers__img" src="img/Interstol.jpg" alt="Интерскол">
         </div>
-        <div class="wrapper-product__item">
-          <img class="wrapper-product__img" src="img/Hitachi.jpg" alt="Hitachi">
+        <div class="wrapper-manufacturers__item">
+          <img class="wrapper-manufacturers__img" src="img/Hitachi.jpg" alt="Hitachi">
         </div>
-        <div class="wrapper-product__item">
-          <img class="wrapper-product__img" src="img/LG.jpg" alt="LG">
+        <div class="wrapper-manufacturers__item">
+          <img class="wrapper-manufacturers__img" src="img/LG.jpg" alt="LG">
         </div>
-        <div class="wrapper-product__item">
-          <img class="wrapper-product__img" src="img/AEG.jpg" alt="AEG">
+        <div class="wrapper-manufacturers__item">
+          <img class="wrapper-manufacturers__img" src="img/AEG.jpg" alt="AEG">
         </div>
-        <div class="wrapper-product__item">
-          <img class="wrapper-product__img" src="img/Metabo.jpg" alt="Metabo">
+        <div class="wrapper-manufacturers__item">
+          <img class="wrapper-manufacturers__img" src="img/Metabo.jpg" alt="Metabo">
         </div>
       </div>
     </section>
